initial swift work

--- a/roles/swift-common/meta/main.yml
+++ b/roles/swift-common/meta/main.yml
@@ -22,5 +22,10 @@ dependencies:
     when: openstack_install_method == 'package'
   - role: openstack-distro
     project_name: swift
-    project_packages: "{{ swift.distro.project_packages }}"
+    dependent_packages:
+      - openstack-swift
+      - openstack-swift-proxy
+      - openstack-swift-account
+      - openstack-swift-container
+      - openstack-swift-object
     when: openstack_install_method == 'distro'
