--- a/roles/swift-common/defaults/main.yml
+++ b/roles/swift-common/defaults/main.yml
@@ -109,4 +109,5 @@ swift:
         no_replicators: 2
         no_auditors: 1
         no_updaters: 1
-  venv_dir: '/opt/openstack/current/swift'
+  venv_dir: '/opt/openstack/base'
+
