--- a/roles/swift-common/handlers/main.yml
+++ b/roles/swift-common/handlers/main.yml
@@ -29,7 +29,7 @@
 # Restarting rsync failing with pid file exists error
 # Adding retry logic to workaround
 - name: restart rsync
-  service: name=rsync state=restarted
+  service: name="{{ (ansible_os_family == 'RedHat')| ternary('rsyncd', 'rsync') }}" state=restarted
   register: result
   until: result|success
   retries: 3
