--- a/roles/swift-object/handlers/main.yml
+++ b/roles/swift-object/handlers/main.yml
@@ -1,10 +1,10 @@
 ---
 - name: restart swift-object service
-  service: name=swift-object state=restarted
+  service: name="{{ (ansible_os_family == 'RedHat') | ternary('openstack-', '') }}swift-object" state=restarted
   when: start_object|bool
 
 - name: restart swift-object-expirer service
-  service: name=swift-object-expirer state=restarted
+  service: name="{{ (ansible_os_family == 'RedHat') | ternary('openstack-', '') }}swift-object-expirer" state=restarted
   when: start_object|bool
 
 - name: restart swift-object-services
